argocd-mgc/datasaude-api-ml-mgc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datasaude-api-ml
  name: datasaude-api-ml
spec:
  replicas: 2
  selector:
    matchLabels:
      app: datasaude-api-ml
  template:
    metadata:
      labels:
        app: datasaude-api-ml
    spec:
      containers:
        - image: cbeloni/datasaude-api-ml:amd64
          name: datasaude-api-ml
          ports:
            - containerPort: 8000
