argocd-mgc/datasaude-api-ml-mgc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: datasaude-api-ml-svc
spec:
  type: ClusterIP
  selector:
    app: datasaude-api-ml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datasaude-api-ml-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: datasaude-api-ml.201.23.17.249.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-api-ml-svc
                port:
                  number: 80
    - host: datasaude-api-ml.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-api-ml-svc
                port:
                  number: 80
